*SVN*

* Pull in latest multibye patch. Closes #6346 [Manfred Stienstra]

* Add ActiveSupport::Multibyte.  Provides String#chars which lets you deal with strings as a sequence of chars, not of bytes. Closes #6242 [Julian Tarkhanov, Manfred Stienstra, Thijs van der Vossen & Jan Behrens]

* Fix issue with #class_inheritable_accessor saving updates to the parent class when initialized with an Array or Hash [mojombo]

* Hash#to_xml supports Bignum and BigDecimal.  #6313 [edibiase]

* Don't undefine #class in OptionMerger [Rick]

* Hash.create_from_xml has been renamed to Hash.from_xml, alias will exist until Rails 2.0 [DHH]

* alias_method_chain works with accessor= methods also.  #6153 [Caio Chassot]

* Fix loadable_constants_for_path to handle load paths that do not end with a slash. [Nicholas Seckar]

* Fix logic error in determining what was loaded by a given file. Closes #6039. [Nicholas Seckar]

* Equate Kernel.const_missing with Object.const_missing. Fixes #5988. [Nicholas Seckar]

* Add ApplicationController special case to Dependencies. [Nicholas Seckar]

* Don't pad remaining places with in_groups_of if specified padding value is false. [Marcel Molina Jr.]

* Fix cases where empty xml nodes weren't being translated to nil in Hash.create_from_xml [Rick Olso n]

  <written-on type="date"></written-on> # => { :type => 'date' } # WRONG
  <written-on type="date"></written-on> # => nil # RIGHT

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Inflections: don't singularize -ies plurals.  [foamdino@gmail.com, Mark Van Holstyn]

* Update Initializer to use load_once_paths to avoid plugin reloading. References #5852. [Nicholas Seckar]

* Use Array#assoc in ActiveSupport::OrderedHash. [Mauricio Fernandez]

* Greatly increased performance of String.to_json, which speeds up RJS considerably on large pages, fixes #3473 [Shugo Maeda]

* Detect missing_constants calls from removed modules and fail accordingly. [Nicholas Seckar]
