@@ -1,5 +1,7 @@
 *SVN*
 
+* Make String#chars slicing behaviour consistent with String. Closes #6387 [Manfred Stienstra]
+
 * Pull in latest multibye patch. Closes #6346 [Manfred Stienstra]
 
 * Add ActiveSupport::Multibyte.  Provides String#chars which lets you deal with strings as a sequence of chars, not of bytes. Closes #6242 [Julian Tarkhanov, Manfred Stienstra, Thijs van der Vossen & Jan Behrens]
